# AmbDiffSeg

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config_crop64.yaml  config_default.yaml
data/: test_ids.txt  vali_ids.txt
notebooks/: visualize.ipynb
src/amb_diff_seg/: data.py  diffusion.py  evaluate.py  train.py  utils.py
src/amb_diff_seg/models/: fp16.py  gen_prob_unet.py  nn.py  unet.py
