[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "amb_diff_seg"
version = "0.0.1"
description = "The official repository for the paper \"Diffusion Based Ambiguous Image Segmentation\""
authors = [
  { name = "Jakob L. Christensen", email = "jloch@dtu.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
